fixed bugs with autocomplete: fixed ie7 crash, fixed z-index in ie7, fixed linkToggle() for ie.

--- a/public/stylesheets/sass/core/ui_elements.sass
+++ b/public/stylesheets/sass/core/ui_elements.sass
@@ -481,7 +481,7 @@ table.plain
   position: absolute
   top: 7px
   left: 6px
-  z-index: 200000
+  z-index= !z_autocomplete
 
 .autocomplete
   width: 300px
